--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 </h2>
               </div>
               <div class="col-md-6 padding-medium-2 ps-md-5 d-grid gap-3">
-                 <a href="booking.html" class="btn btn-primary w-100"
+                 <a href="booking.html" class="btn btn-primary w-100 book-now-btn-links"
                   >Book Now
                   <iconify-icon
                     icon="tabler:arrow-right"
