Added changes to detailing

--- a/booking.html
+++ b/booking.html
@@ -1002,7 +1002,59 @@
       </div>
     </section>
 
-
+    <!-- Timeline or Facts-->
+    <section id="process" class="mt-5">
+      <div style="overflow: hidden">
+        <div class="container" data-aos="zoom-out">
+          <div class="row">
+            <div class="col-md-6 col-lg-3">
+              <div class="py-3 py-md-5 px-3">
+                <h4 class="mb-3">
+                  <span class="heading-color">01.</span> Booking
+                </h4>
+                <p>
+                  Eget magna fermentum iaculis diam phasellus vestibulum lorem
+                  eget mauris pharetra et.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <div class="py-3 py-md-5 px-3">
+                <h4 class="mb-3">
+                  <span class="heading-color">02.</span> inspection
+                </h4>
+                <p>
+                  Velit sed ante in nisl amet sapien. Mauris a ullamcorper ut
+                  iaculis. Et massa non eu ac tristique.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <div class="py-3 py-md-5 px-3">
+                <h4 class="mb-3">
+                  <span class="heading-color">03.</span> Valuation
+                </h4>
+                <p>
+                  In tincidunt in tortor ligula risus nulla blandit eget mauris
+                  ete pharetraeget etem.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <div class="py-3 py-md-5 px-3">
+                <h4 class="mb-3">
+                  <span class="heading-color">04.</span> Completion
+                </h4>
+                <p>
+                  Mauris a ullamcorper ut iaculis. Et massa non eu ac tristique
+                  ligula risus egestas consectetur.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
 <!-- Footer -->
