Added changes to packages page

--- a/contact.html
+++ b/contact.html
@@ -36,107 +36,177 @@
 <body data-bs-spy="scroll" data-bs-target="#header-nav" tabindex="0">
 
 
-  <nav class="navbar fixed-top navbar-expand-lg container-fluid p-4">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="images/main-logo-light.png" alt="logo"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-        aria-controls="offcanvasNavbar">
-        <iconify-icon icon="system-uicons:menu-hamburger" class="hamburger-menu"></iconify-icon>
-      </button>
-      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title text-white" id="offcanvasNavbarLabel">Menu</h5>
-          <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas"
-            aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-          <ul class="navbar-nav align-items-center justify-content-end justify-content-xxl-center flex-grow-1 pe-3">
-            <li class="nav-item">
-              <a class="nav-link text-white text-uppercase  active mx-2 px-3 mb-2 mb-lg-0" aria-current="page"
-                href="index.html">home</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link text-white text-uppercase mx-2 px-3 mb-2 mb-lg-0 dropdown-toggle"
-                data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" href="#">Pages</a>
-              <ul class="dropdown-menu">
-                <li><a href="about.html" class="dropdown-item text-uppercase ">About <span
-                      class="badge bg-secondary">Pro</span></a></li>
-                <li><a href="blog.html" class="dropdown-item text-uppercase ">Blog <span
-                      class="badge bg-secondary">Pro</span></a></li>
-                <li><a href="blog-single.html" class="dropdown-item text-uppercase ">Blog-Single <span
-                      class="badge bg-secondary">Pro</span></a></li>
-                <li><a href="booking.html" class="dropdown-item text-uppercase ">Booking <span
-                      class="badge bg-secondary">Pro</span></a></li>
-                <li><a href="services.html" class="dropdown-item text-uppercase ">Services <span
-                      class="badge bg-secondary">Pro</span></a></li>
-                <li><a href="services-single.html" class="dropdown-item text-uppercase ">Service-Single
-                    <span class="badge bg-secondary">Pro</span></a></li>
-                <li><a href="project.html" class="dropdown-item text-uppercase ">Project <span
-                      class="badge bg-secondary">Pro</span></a></li>
-                <li><a href="pricing.html" class="dropdown-item text-uppercase ">Pricing <span
-                      class="badge bg-secondary">Pro</span></a></li>
-                <li><a href="contact.html" class="dropdown-item text-uppercase ">Contact <span
-                      class="badge bg-secondary">Pro</span></a></li>
-                <li><a href="team.html" class="dropdown-item text-uppercase ">Our Team <span
-                      class="badge bg-secondary">Pro</span></a></li>
-                <li><a href="review.html" class="dropdown-item text-uppercase ">Reviews <span
-                      class="badge bg-secondary">Pro</span></a></li>
-                <li><a href="faq.html" class="dropdown-item text-uppercase ">FAQs <span
-                      class="badge bg-secondary">Pro</span></a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white text-uppercase  mx-2 px-3 mb-2 mb-lg-0" href="#">booking</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white text-uppercase  mx-2 px-3 mb-2 mb-lg-0" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white text-uppercase  mx-2 px-3 mb-2 mb-lg-0" href="#">blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white text-uppercase  mx-2 px-3 mb-2 mb-lg-0" href="#">gallery</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white text-uppercase  mx-2 px-3 mb-2 mb-lg-0" href="#">Contact</a>
-            </li>
+    <nav class="navbar fixed-top navbar-expand-xl container-fluid p-4">
+      <!-- Logo -->
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"
+          ><img src="images/horizontal-logo.png" alt="logo"
+        /></a>
 
-          </ul>
+        <!-- Mobile Layout -->
+         <div class="d-flex align-items-center gap-3 d-xl-none">
+  <a href="tel:+17045611927" class="text-white pt-2">
+    <iconify-icon
+      icon="ic:baseline-call"
+      class="call-icon"
+      style="font-size: 1.5rem;"
+    ></iconify-icon>
+  </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar"
+        >
+          <iconify-icon
+            icon="system-uicons:menu-hamburger"
+            class="hamburger-menu"
+          ></iconify-icon>
+        </button>
+      </div>
 
-          <div class="  d-flex mt-5 mt-lg-0 ps-lg-5 align-items-center justify-content-end ">
-            <ul class="navbar-nav social-div justify-content-end align-items-center">
+        <div
+          class="offcanvas offcanvas-end"
+          tabindex="-1"
+          id="offcanvasNavbar"
+          aria-labelledby="offcanvasNavbarLabel"
+        >
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title text-white" id="offcanvasNavbarLabel">
+              Supreme Nomads
+            </h5>
+            <button
+              type="button"
+              class="btn-close btn-close-white text-reset"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+
+          <div class="offcanvas-body" >
+            <!-- Routes -->
+            <ul
+              class="navbar-nav align-items-center justify-content-end justify-content-xxl-center flex-grow-1"
+            >
               <li class="nav-item">
-                <a class="nav-link d-flex align-items-center px-3" href="#">
-                  <iconify-icon icon="ri:facebook-fill" class="social-icon text-white"></iconify-icon>
-                </a>
+                <a
+                  class="nav-link text-white text-uppercase active mx-2 px-1 mb-2 mb-lg-0"
+                  aria-current="page"
+                  href="index.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link d-flex align-items-center px-3" href="#">
-                  <iconify-icon icon="ri:instagram-line" class="social-icon text-white"></iconify-icon>
-                </a>
+                <a
+                  class="nav-link text-white text-uppercase mx-2 px-1 mb-2 mb-lg-0"
+                  href="project.html"
+                  >Gallery</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link d-flex align-items-center px-3" href="#">
-                  <iconify-icon icon="ri:twitter-fill" class="social-icon text-white"></iconify-icon>
-                </a>
+                <a
+                  class="nav-link text-white text-uppercase mx-2 px-1 mb-2 mb-lg-0"
+                  href="services.html"
+                  >Our Services</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link d-flex align-items-center px-3" href="#">
-                  <iconify-icon icon="ri:linkedin-fill" class="social-icon text-white"></iconify-icon>
-                </a>
+                <a
+                  class="nav-link text-white text-uppercase mx-2 px-1 mb-2 mb-lg-0"
+                  href="about.html"
+                  >About Us</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link d-flex align-items-center px-3" href="#">
-                  <iconify-icon icon="ri:youtube-fill" class="social-icon text-white"></iconify-icon>
-                </a>
+                <a
+                  class="nav-link text-white text-uppercase mx-2 px-1 mb-2 mb-lg-0"
+                  href="services-single.html"
+                  >Academy</a
+                >
               </li>
             </ul>
+
+            <!-- Socials -->
+            <div 
+              class="d-flex mt-lg-0 align-items-center justify-content-center offcanvas-body social-div"
+            >
+              <ul
+                class="d-flex flex-row gap-2 list-unstyled mb-0 social-ul"
+              >
+              <li class="nav-item">
+                  <a class="nav-link d-flex align-items-center" href="tel:+17045611927"
+              target="_blank"
+              rel="noopener noreferrer">
+                    <iconify-icon
+                      icon="ic:baseline-call"
+                      class="social-icon text-white"
+                    ></iconify-icon>
+                  </a>
+                </li>
+              <li class="nav-item">
+                  <a class="nav-link d-flex align-items-center" href="https://www.tiktok.com/@supremenomads704"
+              target="_blank"
+              rel="noopener noreferrer">
+                    <iconify-icon
+                      icon="ri:tiktok-fill"
+                      class="social-icon text-white"
+                    ></iconify-icon>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link d-flex align-items-center" href="https://www.instagram.com/supremenomads"
+              target="_blank"
+              rel="noopener noreferrer">
+                    <iconify-icon
+                      icon="ri:instagram-line"
+                      class="social-icon text-white"
+                    ></iconify-icon>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link d-flex align-items-center" href="#">
+                    <iconify-icon
+                      icon="ri:facebook-fill"
+                      class="social-icon text-white"
+                    ></iconify-icon>
+                  </a>
+                </li>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link d-flex align-items-center" href="https://www.facebook.com/Supremenomads/"
+              target="_blank"
+              rel="noopener noreferrer"
+              onclick="openFacebook(event)">
+                    <iconify-icon
+                      icon="mdi:yelp"
+                      class="social-icon text-white"
+                    ></iconify-icon>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link d-flex align-items-center" href="#">
+                    <iconify-icon
+                      icon="ri:youtube-fill"
+                      class="social-icon text-white"
+                    ></iconify-icon>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            
+            <!-- Book Now -->
+            <div class="book-now-div">
+            <a href="booking.html" class="btn btn-primary book-now-btn w-100 w-xl-auto ms-0 ms-xl-3">
+              Book Now
+            </a>
+            </div>
           </div>
+
         </div>
       </div>
-    </div>
-  </nav>
-
+    </nav>
+    
   <section id="hero" style="background-image:url(images/banner5-img.jpg);">
     <div class="container py-5">
       <div class="row ">
