--- a/booking.html
+++ b/booking.html
@@ -51,6 +51,14 @@
         /></a>
 
         <!-- Mobile Layout -->
+         <div class="d-flex align-items-center gap-3 d-xl-none">
+  <a href="tel:+17045611927" class="text-white pt-2">
+    <iconify-icon
+      icon="ic:baseline-call"
+      class="call-icon"
+      style="font-size: 1.5rem;"
+    ></iconify-icon>
+  </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -63,6 +71,8 @@
             class="hamburger-menu"
           ></iconify-icon>
         </button>
+      </div>
+
         <div
           class="offcanvas offcanvas-end"
           tabindex="-1"
@@ -84,11 +94,11 @@
           <div class="offcanvas-body" >
             <!-- Routes -->
             <ul
-              class="navbar-nav align-items-center justify-content-end justify-content-xxl-center flex-grow-1 pe-3 ms-lg-5"
+              class="navbar-nav align-items-center justify-content-end justify-content-xxl-center flex-grow-1"
             >
               <li class="nav-item">
                 <a
-                  class="nav-link text-white text-uppercase active mx-2 px-1 mb-2 mb-lg-0"
+                  class="nav-link text-white text-uppercase mx-2 px-1 mb-2 mb-lg-0"
                   aria-current="page"
                   href="index.html"
                   >Home</a
@@ -125,12 +135,22 @@
             </ul>
 
             <!-- Socials -->
-            <div
-              class="d-flex mt-5 mt-lg-0 ps-lg-5 align-items-center justify-content-end social-nav"
+            <div 
+              class="d-flex mt-lg-0 align-items-center justify-content-center offcanvas-body social-div"
             >
               <ul
-                class="d-flex flex-row gap-2 list-unstyled mb-0 social-div"
+                class="d-flex flex-row gap-2 list-unstyled mb-0 social-ul"
               >
+              <li class="nav-item">
+                  <a class="nav-link d-flex align-items-center" href="tel:+17045611927"
+              target="_blank"
+              rel="noopener noreferrer">
+                    <iconify-icon
+                      icon="ic:baseline-call"
+                      class="social-icon text-white"
+                    ></iconify-icon>
+                  </a>
+                </li>
               <li class="nav-item">
                   <a class="nav-link d-flex align-items-center" href="https://www.tiktok.com/@supremenomads704"
               target="_blank"
@@ -140,6 +160,7 @@
                       class="social-icon text-white"
                     ></iconify-icon>
                   </a>
+                </li>
                 <li class="nav-item">
                   <a class="nav-link d-flex align-items-center" href="https://www.instagram.com/supremenomads"
               target="_blank"
@@ -182,7 +203,7 @@
             </div>
             
             <!-- Book Now -->
-            <div>
+            <div class="book-now-div">
             <a href="booking.html" class="btn btn-primary book-now-btn w-100 w-xl-auto ms-0 ms-xl-3">
               Book Now
             </a>
@@ -1063,8 +1084,8 @@
   <footer class="row my-5 py-5">
     
     <!-- Logo & Contact -->
-    <div class="col-12 col-md-6 col-lg-3 mb-4 mb-lg-0 text-center text-lg-start">
-      <img src="images/horizontal-logo.png" alt="Supreme" class="footer-logo" />
+    <div><img src="https://res.cloudinary.com/dnsc73sla/image/upload/v1752006942/logo-gold-horse-name_dmbkjk.svg" alt="Supreme Nomands Logo" class="footer-logo mx-auto d-block"/></div>
+    <div class="col-12 col-lg-3 mb-4 mb-lg-0 text-center text-lg-start">
       <h5 class="mobile footer-heading1">Mobile Detailing Unit</h5>
       <h6 class="mobile footer-heading2">We come to you!</h6>
       <div class="contact-info mt-3">
@@ -1127,21 +1148,9 @@
       </div>
     </div>
 
-    <!-- Pages / Quick Links -->
-    <div class="col-12 col-md-6 col-lg-2 mb-4 mb-lg-0 text-center text-lg-start">
-      <h5 class="fs-5 mt-3 mt-lg-0 mb-3">Quick Links</h5>
-      <ul class="navbar-nav flex-column mx-auto d-inline-block">
-        <li class="nav-item footer-list mb-3"><a href="#" class="nav-link text-uppercase p-0">Home</a></li>
-        <li class="nav-item footer-list mb-3"><a href="project.html" class="nav-link text-uppercase p-0">Gallery</a></li>
-        <li class="nav-item footer-list mb-3"><a href="services.html" class="nav-link text-uppercase p-0">Our Services</a></li>
-        <li class="nav-item footer-list mb-3"><a href="about.html" class="nav-link text-uppercase p-0">About Us</a></li>
-        <li class="nav-item footer-list mb-3"><a href="services-single.html" class="nav-link text-uppercase p-0">Academy</a></li>
-      </ul>
-    </div>
-
     <!-- Cities -->
 <div class="col-12 col-lg-7 text-center text-lg-start">
-  <h5 class="fs-5 mt-3 mt-lg-0 mb-3">We Serve</h5>
+  <h5 class="fs-5 mt-3 mt-lg-0 mb-3 d-flex justify-content-center">We Serve</h5>
   <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3 justify-content-center">
     <div class="col"><a href="#" class="nav-link text-uppercase p-0">Charlotte</a></div>
     <div class="col"><a href="#" class="nav-link text-uppercase p-0">Concord</a></div>
@@ -1154,6 +1163,18 @@
     <div class="col"><a href="#" class="nav-link text-uppercase p-0">Rockhill, SC</a></div>
   </div>
 </div>
+
+    <!-- Pages / Quick Links -->
+<div class="col-12 col-lg-2 mb-4 mb-lg-0 text-center text-lg-start">
+      <h5 class="fs-5 mt-3 mt-lg-0 mb-3">Quick Links</h5>
+      <ul class="navbar-nav flex-column mx-auto d-inline-block">
+        <li class="nav-item footer-list mb-3"><a href="#" class="nav-link text-uppercase p-0">Home</a></li>
+        <li class="nav-item footer-list mb-3"><a href="project.html" class="nav-link text-uppercase p-0">Gallery</a></li>
+        <li class="nav-item footer-list mb-3"><a href="services.html" class="nav-link text-uppercase p-0">Our Services</a></li>
+        <li class="nav-item footer-list mb-3"><a href="about.html" class="nav-link text-uppercase p-0">About Us</a></li>
+        <li class="nav-item footer-list mb-3"><a href="services-single.html" class="nav-link text-uppercase p-0">Academy</a></li>
+      </ul>
+    </div>
 
   </footer>
 </div>
