Add changes review

--- a/project.html
+++ b/project.html
@@ -325,7 +325,7 @@
 <!-- Reviews -->
     <section id="review">
       <div style="overflow: hidden">
-        <div class="services-sub container my-5 py-5" data-aos="zoom-out">
+        <div class="services-sub container my-5 py-5">
           <p class="header-top text-center mb-3">What Customers Say</p>
           <h2 class="text-center mb-3">Our Customers reviews</h2>
           <div class="row">
