--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
       <div style="overflow: hidden">
         <div class="container py-5" data-aos="zoom-out">
           <p class="header-top">Pricing plans</p>
-          <h2 class="display-4 mb-5">Our Detailing Packages</h2>
+          <h2 class="display-4 mb-5">Detailing Packages</h2>
 
           <ul class="nav nav-tabs my-3" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
@@ -511,7 +511,7 @@
                 aria-controls="regular-tab-pane"
                 aria-selected="true"
               >
-                Sedan
+                Sedan/Coup
               </button>
             </li>
             <li class="nav-item" role="presentation">
@@ -962,7 +962,7 @@
     <div><img src="https://res.cloudinary.com/dnsc73sla/image/upload/v1752006942/logo-gold-horse-name_dmbkjk.svg" alt="Supreme Nomands Logo" class="footer-logo mx-auto d-block"/></div>
     <div class="col-12 col-lg-3 mb-4 mb-lg-0 text-center text-lg-start">
       <h5 class="mobile footer-heading1">Mobile Detailing Unit</h5>
-      <h6 class="mobile footer-heading2">We come to you!</h6>
+      <!-- <h6 class="mobile footer-heading2">We come to you!</h6> -->
       <div class="contact-info mt-3">
         <p class="mb-1">
           <a href="tel:+1704-561-1927" class="text-decoration-none" target="_blank" rel="noopener noreferrer">
