--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
     <div><img src="https://res.cloudinary.com/dnsc73sla/image/upload/v1752006942/logo-gold-horse-name_dmbkjk.svg" alt="Supreme Nomands Logo" class="footer-logo mx-auto d-block"/></div>
     <div class="col-12 col-lg-3 mb-4 mb-lg-0 text-center text-lg-start">
       <h5 class="mobile footer-heading1">Mobile Detailing Unit</h5>
-      <!-- <h6 class="mobile footer-heading2">We come to you!</h6> -->
+      <h6 class="mobile footer-heading2 pt-2">We come to you!</h6>
       <div class="contact-info mt-3">
         <p class="mb-1">
           <a href="tel:+1704-561-1927" class="text-decoration-none" target="_blank" rel="noopener noreferrer">
@@ -1024,7 +1024,7 @@
     </div>
 
     <!-- Cities -->
-<div class="col-12 col-lg-7 text-center text-lg-start">
+<div class="col-12 col-lg-7 text-center">
   <h5 class="fs-5 mt-3 mt-lg-0 mb-3 d-flex justify-content-center">We Serve</h5>
   <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3 justify-content-center">
     <div class="col"><a href="#" class="nav-link text-uppercase p-0">Charlotte</a></div>
@@ -1040,10 +1040,10 @@
 </div>
 
     <!-- Pages / Quick Links -->
-<div class="col-12 col-lg-2 mb-4 mb-lg-0 text-center text-lg-start">
+<div class="col-12 col-lg-2 mb-4 mb-lg-0 text-start">
       <h5 class="fs-5 mt-3 mt-lg-0 mb-3">Quick Links</h5>
-      <ul class="navbar-nav flex-column mx-auto d-inline-block">
-        <li class="nav-item footer-list mb-3"><a href="#" class="nav-link text-uppercase p-0">Home</a></li>
+      <ul class="navbar-nav flex-column">
+        <li class="nav-item footer-list mb-3 "><a href="#" class="nav-link text-uppercase p-0">Home</a></li>
         <li class="nav-item footer-list mb-3"><a href="project.html" class="nav-link text-uppercase p-0">Gallery</a></li>
         <li class="nav-item footer-list mb-3"><a href="services.html" class="nav-link text-uppercase p-0">Our Services</a></li>
         <li class="nav-item footer-list mb-3"><a href="about.html" class="nav-link text-uppercase p-0">About Us</a></li>
