--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@
           id="offcanvasNavbar"
           aria-labelledby="offcanvasNavbarLabel"
         >
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title text-white" id="offcanvasNavbarLabel">
+          <div class="offcanvas-header my-2 mx-3">
+            <img src="./images/logo-gold-text.svg" alt="Supreme Nomads Detailing Logo"/> 
+            <!-- <h5 class="offcanvas-title text-white" id="offcanvasNavbarLabel">
               Supreme Nomads
-            </h5>
+            </h5> -->
             <button
               type="button"
               class="btn-close btn-close-white text-reset"
@@ -245,8 +246,8 @@
         <div class="container-fluid border-bottom" data-aos="zoom-out">
           <div class="container">
             <div class="row align-items-center">
-              <div class="col-md-6 padding-medium pe-5 border-end">
-                <h2 class="display-4">
+              <div class="col-md-6 padding-medium pe-lg-5 border-end">
+                <h2 class="display-4 text-center">
                   Quick Links
                 </h2>
               </div>
@@ -511,7 +512,7 @@
                 aria-controls="regular-tab-pane"
                 aria-selected="true"
               >
-                Sedan/Coup
+                Sedan/Coup&eacute;
               </button>
             </li>
             <li class="nav-item" role="presentation">
@@ -955,12 +956,16 @@
 
 <!-- Footer -->
     <section id="footer">
+  
       <div class="container footer-containerG mt-5 mt-md-0 pt-3">
-  <footer class="row my-5 py-5">
-    
-    <!-- Logo & Contact -->
-    <div><img src="https://res.cloudinary.com/dnsc73sla/image/upload/v1752006942/logo-gold-horse-name_dmbkjk.svg" alt="Supreme Nomands Logo" class="footer-logo mx-auto d-block"/></div>
-    <div class="col-12 col-lg-3 mb-4 mb-lg-0 text-center text-lg-start">
+ 
+       <!-- Logo & Contact -->
+    <div><img src="https://res.cloudinary.com/dnsc73sla/image/upload/v1752006942/logo-gold-horse-name_dmbkjk.svg" alt="Supreme Nomands Logo" class="footer-logo mx-auto d-block mt-5"/>
+    </div>
+   
+    <!--  -->
+     <footer class="row py-3">
+    <div class="col-12 col-lg-3 mb-4 mb-lg-0 text-left text-center">
       <h5 class="mobile footer-heading1">Mobile Detailing Unit</h5>
       <h6 class="mobile footer-heading2 pt-2">We come to you!</h6>
       <div class="contact-info mt-3">
@@ -969,13 +974,13 @@
             <iconify-icon icon="mdi:phone" style="vertical-align: middle; margin-right: 6px;"></iconify-icon>704-561-1927
           </a>
         </p>
-        <p>
+        <p class="mb-1">
           <a href="mailto:info@supremenomads.com" class="text-decoration-none" target="_blank" rel="noopener noreferrer">
             <iconify-icon icon="mdi:email" style="vertical-align: middle; margin-right: 6px;"></iconify-icon>info@supremenomads.com
           </a>
         </p>
       </div>
-      <div class="d-flex justify-content-center justify-content-lg-start align-items-center mt-3">
+      <div class="d-flex justify-content-center justify-content-lg-center align-items-center mt-3">
         <!-- social icons -->
           <a
                 href="https://www.tiktok.com/@supremenomads704"
@@ -1016,7 +1021,7 @@
               ></a>
               <a href="#" target="_blank"
                 ><iconify-icon
-                  class="social-icon-footer pe-4"
+                  class="social-icon-footer"
                   icon="mdi:youtube"
                 ></iconify-icon
               ></a>
@@ -1024,8 +1029,8 @@
     </div>
 
     <!-- Cities -->
-<div class="col-12 col-lg-7 text-center">
-  <h5 class="fs-5 mt-3 mt-lg-0 mb-3 d-flex justify-content-center">We Serve</h5>
+<div class="col-12 col-lg-6 text-center text-lg-start">
+  <h5 class="fs-5 mt-3 mt-lg-0 mb-3 d-flex justify-content-center ">We Serve</h5>
   <div class="row row-cols-1 row-cols-lg-3 g-2 g-lg-3 justify-content-center">
     <div class="col"><a href="#" class="nav-link text-uppercase p-0">Charlotte</a></div>
     <div class="col"><a href="#" class="nav-link text-uppercase p-0">Concord</a></div>
@@ -1040,8 +1045,8 @@
 </div>
 
     <!-- Pages / Quick Links -->
-<div class="col-12 col-lg-2 mb-4 mb-lg-0 text-start">
-      <h5 class="fs-5 mt-3 mt-lg-0 mb-3">Quick Links</h5>
+<div class="col-12 col-lg-3 mb-4 mb-lg-0 text-center text-lg-start">
+      <h5 class="fs-5 mt-5 mt-lg-0 mb-3">Quick Links</h5>
       <ul class="navbar-nav flex-column">
         <li class="nav-item footer-list mb-3 "><a href="#" class="nav-link text-uppercase p-0">Home</a></li>
         <li class="nav-item footer-list mb-3"><a href="project.html" class="nav-link text-uppercase p-0">Gallery</a></li>
@@ -1051,7 +1056,6 @@
       </ul>
     </div>
 
-  </footer>
 </div>
         </footer>
       </div>
