--- a/services-single.html
+++ b/services-single.html
@@ -213,15 +213,15 @@
             <div class="row py-5">
                 <div
                     class="d-flex flex-wrap flex-column justify-content-center align-items-center my-5 py-5 text-white">
-                    <h2 class="page-title display-3 mt-5 text-white">Supreme Nomads Academy</h2>
-                    <nav class="breadcrumb">
-                        <a class="breadcrumb-item text-white text-center" href="index.html">As John C. Maxwell wisely said, “You never really know something until you teach it to someone else.” These words resonate deeply with us at Supreme Nomads Detailing. Even as a respected name in the Charlotte auto industry, we're committed to continuous improvement and sharing our expertise. Stay tuned as we develop the Supreme Nomads Academy, where we'll offer insights and training to elevate your detailing skills! Click below to subscribe for updates and be the first to know when we launch!</a>
-                        <!-- <span class="breadcrumb-item active text-white" aria-current="page">Service-Single</span> -->
-                    </nav>
+                    <h2 class="page-title display-3 mt-5 text-white text-center">Supreme Nomads Academy</h2>
                 </div>
             </div>
         </div>
     </section>
+
+    <div class="px-5 pb-5">
+      <p class="header-top mt-5 text-center">As John C. Maxwell wisely said, “You never really know something until you teach it to someone else.” These words resonate deeply with us at Supreme Nomads Detailing. Even as a respected name in the Charlotte auto industry, we're committed to continuous improvement and sharing our expertise. Stay tuned as we develop the Supreme Nomads Academy, where we'll offer insights and training to elevate your detailing skills! Click below to subscribe for updates and be the first to know when we launch!</p>
+    </div>
 
 <!-- Footer -->
     <section id="footer">
