--- a/services.html
+++ b/services.html
@@ -238,7 +238,7 @@
                 aria-controls="regular-tab-pane"
                 aria-selected="true"
               >
-                Sedan/Coup
+                Sedan/Coup&eacute;
               </button>
             </li>
             <li class="nav-item" role="presentation">
@@ -672,7 +672,7 @@
         <section id="price" class="py-5 paint-packages">
       <div style="overflow: hidden">
         <div class="container py-5" data-aos="zoom-out">
-          <h2 class="display-4 mb-5">Paint Protection Packages</h2>
+          <h2 class="display-4 mb-5">Paint Protection</h2>
 
           <ul class="nav nav-tabs my-3" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
@@ -686,7 +686,7 @@
                 aria-controls="regular-tab-pane"
                 aria-selected="true"
               >
-                Sedan
+                Sedan/Coup&eacute;
               </button>
             </li>
             <li class="nav-item" role="presentation">
@@ -1281,7 +1281,7 @@
 
 <!-- Footer -->
     <section id="footer">
-      <div class="container footer-containerG mt-5 mt-md-0 pt-3">
+      <div class="container footer-containerG mt-lg-5 mt-sm-0 mt-md-0 pt-3">
   <footer class="row my-5 py-5">
     
     <!-- Logo & Contact -->
